WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107584
The BackgroundHTMLParser shouldn't pause when waiting for scripts
https://bugs.webkit.org/show_bug.cgi?id=107584
Summary
The BackgroundHTMLParser shouldn't pause when waiting for scripts
Adam Barth
Reported
2013-01-22 14:09:53 PST
The BackgroundHTMLParser shouldn't pause when waiting for scripts
Attachments
Patch
(15.07 KB, patch)
2013-01-22 14:12 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Patch for landing
(15.14 KB, patch)
2013-01-22 14:34 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2013-01-22 14:12:57 PST
Created
attachment 184045
[details]
Patch
Eric Seidel (no email)
Comment 2
2013-01-22 14:25:59 PST
Comment on
attachment 184045
[details]
Patch LGTM.
Adam Barth
Comment 3
2013-01-22 14:34:00 PST
Created
attachment 184047
[details]
Patch for landing
WebKit Review Bot
Comment 4
2013-01-22 15:16:24 PST
Comment on
attachment 184047
[details]
Patch for landing Clearing flags on attachment: 184047 Committed
r140478
: <
http://trac.webkit.org/changeset/140478
>
WebKit Review Bot
Comment 5
2013-01-22 15:16:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug